--- a/ajax/index.html
+++ b/ajax/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/leaflet_awesome/leaflet_awesome_markers.css">
+    <link rel="stylesheet" href="leaflet_awesome_markers.css">
 
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="assets/leaflet_awesome/leaflet_awesome_markers.js"></script>
+    <script src="leaflet_awesome_markers.js"></script>
 
     <style type="text/css">
     #map {
