--- a/leaflet/g5.html
+++ b/leaflet/g5.html
@@ -13,7 +13,10 @@
 <body>
  
   <div id="map"></div>
- 
+ <script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js'></script>
+  <script src='https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js'></script>
+  <script src='https://cdn.osmbuildings.org/Leaflet.draw/0.2.0/leaflet.draw.js'></script>
+  <script src="index.js"></script>
   <script>
  
   // initialize the map
