--- a/leaflet/g6.html
+++ b/leaflet/g6.html
@@ -13,10 +13,14 @@
 <body>
  
   <div id="map"></div>
+  //<script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css"/>
+  <script src="OSMBuildings-Leaflet.js"></script>
+  
  //<script src='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js'></script>
-  <script src='https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js'></script>
-  <script src='https://cdn.osmbuildings.org/Leaflet.draw/0.2.0/leaflet.draw.js'></script>
-  <script src="index.js"></script>
+  //<script src='https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js'></script>
+  //<script src='https://cdn.osmbuildings.org/Leaflet.draw/0.2.0/leaflet.draw.js'></script>
+  //<script src="index.js"></script>
   <script>
  
   // initialize the map
