--- a/leaflet/g7.html
+++ b/leaflet/g7.html
@@ -4,6 +4,14 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  
+  <script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css"/>
+	<!--[if lte IE 8]>
+    	<	link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.ie.css" />
+	<![endif]-->
+	<script src="OSMBuildings-Leaflet.js"></script>
+  
   <style>
     #map{ height: 100% }
   </style>
