--- a/leaflet/g7.html
+++ b/leaflet/g7.html
@@ -2,7 +2,7 @@
 <head>
   <title>A Leaflet map!</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  //<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   
   <script src="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
