--- a/leaflet/gg7.html
+++ b/leaflet/gg7.html
@@ -144,7 +144,7 @@
       
       osmb.setDate(new Date(2014, 04, 15, 8, 30))
 
-      L.control.layers({}, { Buildings:osmb}).addTo(map
+      L.control.layers({}, { Buildings:osmb}).addTo(map)
 						    
 var states = [{
     "type": "Feature",
