--- a/leaflet/gg7.html
+++ b/leaflet/gg7.html
@@ -148,7 +148,9 @@
 						    
 var states = [{
     "type": "Feature",
-    "properties": {"party": "Republican"},
+    "properties": {"party": "Republican",
+		  "height": 60,
+              "minHeight": 30},
     "geometry": {
         "type": "Polygon",
         "coordinates": [[
@@ -164,7 +166,9 @@ var states = [{
     }
 }, {
     "type": "Feature",
-    "properties": {"party": "Democrat"},
+    "properties": {"party": "Democrat",
+		  "height": 60,
+              "minHeight": 30},
     "geometry": {
         "type": "Polygon",
         "coordinates": [[
