--- a/heightmap2raw.html
+++ b/heightmap2raw.html
@@ -43,7 +43,7 @@ canvas {
 </style>
 </head>
 <body>
-<input type="text" value="http://i.imgur.com/RDsRy9V.jpg" id="img_url">
+<input type="text" value="TDM1_DEM__30_N07E081_DEM_QL.png" id="img_url">
 <input type="button" value="Load image" id="load">
 <input type="button" id="download" value="Download raw" disabled="disabled">
 <br>
